--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Saleh Z. AL-Atwah</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-7"><strong><em>
-                        A Reservoir Petrophyisist with passion towards machine learning and deep learning data driven approaches in integrated static-dynamic reservoir characterization and geological modeling.</em></strong><br><br><strong>Demonstrable robust cross-discipline expertise, working integrated knowledge across all subsurface and engineering upstream disciplines , through the exploration and development life-cycle.&nbsp;<em><br></em></strong></p>
+                        A Reservoir Petrophyisist/Data Scientist with passion towards machine learning and deep learning data driven approaches in integrated static-dynamic reservoir characterization and geological modeling.</em></strong><br><br><strong>Demonstrable robust cross-discipline expertise, working integrated knowledge across all subsurface and engineering upstream disciplines , through the exploration and development life-cycle.&nbsp;<em><br></em></strong></p>
                 <div class="social-row display-7 mt-4">
                     <div class="soc-item">
                         <a href="https://www.linkedin.com/in/saleh-al-atwah/" target="_blank">
