--- a/index.html
+++ b/index.html
@@ -177,8 +177,6 @@
 </section>
 
 <section class="team1 cid-semouxdajy" data-bg-video="https://www.youtube.com/watch?v=VH1C7xACJt4" id="team1-s">
-    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 29, 43);">
-    </div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12">
@@ -186,12 +184,13 @@
                     <strong>Education</strong>
                 </h3>
             </div>
-            <div class="col-sm-6 col-lg-4">
-                <div class="card-wrap">
-                    <div class="image-wrap">
-                        <img src="assets/images/tu-logo-primary-engineering-removebg-preview-696x295.png" alt="">
+
+            <div class="card col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper">
+                    <div class="img-wrapper">
+                        <img src="assets/images/tu-logo-primary-engineering-removebg-preview-696x295.png" alt="The University of Tulsa">
                     </div>
-                    <div class="content-wrap">
+                    <div class="card-box align-center">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
                             <strong>The University of Tulsa</strong>
                         </h5>
@@ -207,12 +206,12 @@
             </div>
 
             <!-- Master's Degree Section -->
-            <div class="col-sm-6 col-lg-4">
-                <div class="card-wrap">
-                    <div class="image-wrap">
+            <div class="card col-12 col-md-6 col-lg-4">
+                <div class="card-wrapper">
+                    <div class="img-wrapper">
                         <img src="assets/images/e054cc62cde013e722c6f6f23f685ce5.png" alt="TU Delft Logo">
                     </div>
-                    <div class="content-wrap">
+                    <div class="card-box align-center">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
                             <strong>Delft University of Technology</strong>
                         </h5>
@@ -227,6 +226,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </section>
