--- a/index.html
+++ b/index.html
@@ -103,10 +103,8 @@
                     <div class="relative">
                         <div class="w-64 h-64 md:w-80 md:h-80 bg-gradient-to-r from-blue-400 to-green-400 rounded-full flex items-center justify-center">
                             <div class="w-60 h-60 md:w-72 md:h-72 bg-white rounded-full overflow-hidden shadow-xl">
-                                <!-- Placeholder for profile image -->
-                                <div class="w-full h-full bg-gray-200 flex items-center justify-center">
-                                    <i class="fas fa-user text-6xl text-gray-400"></i>
-                                </div>
+                                <!-- Profile image -->
+                                <img src="https://raw.githubusercontent.com/atwahsz/atwahsz.github.io/refs/heads/master/assets/files/1714081401728.jpg" alt="A professional photo of Saleh Z. Alatwah" class="w-full h-full object-cover">
                             </div>
                         </div>
                         <div class="absolute -bottom-5 -right-5 bg-white p-4 rounded-lg shadow-lg">
