--- a/AI_AGENCY/index.html
+++ b/AI_AGENCY/index.html
@@ -45,7 +45,7 @@
                             <i data-feather="chevron-down" class="w-4 h-4 mr-1"></i>
                         </button>
                         <div class="absolute hidden group-hover:block bg-gray-800 rounded-lg shadow-lg mt-1 w-28 z-50">
-                            <a href="/en" class="block px-4 py-2 text-sm text-gray-300 hover:bg-gray-700 hover:text-blue-400">English</a>
+                            <a href="/AI_AGENCY/en.html" class="block px-4 py-2 text-sm text-gray-300 hover:bg-gray-700 hover:text-blue-400">English</a>
                             <a href="/" class="block px-4 py-2 text-sm text-gray-300 hover:bg-gray-700 hover:text-blue-400">العربية</a>
                         </div>
                     </div>
@@ -481,3 +481,4 @@ size: 1.00
     </script>
 </body>
 </html>
+
